added helper functions

--- a/index.html
+++ b/index.html
@@ -8,14 +8,34 @@
 <body>
     <!-- Starting simple first, basic addition -->
 
-    <section id="calc-container" class="calcontainer">
-        <div>
-            <label for="income">Net Income</label>
-            <input type="text" name="income" id="income" value="0">
+    <section id="calc-container" class="calc-container">
+        <div id="income-container">
+            <div>
+                <label for="income">Net Salary Income</label>
+                <input type="text" name="income" id="income" value="0">
+            </div>
+            <div>
+                <label for="investments">Investments/Savings</label>
+                <input type="text" name="investments" id="investments" value="0">
+            </div>
+            <div>
+                <label for="bonus">Net Bonus</label>
+                <input type="text" name="bonus" id="bonus" value="0">
+            </div>
         </div>
-        <div>
-            <label for="expenses">Total Expenses</label>
-            <input type="text" name="expenses" id="expenses" value="0">
+        <div id="expenses-container">
+            <div>
+                <label for="mortgage">Enter Mortgage/Rent Payment: </label>
+                <input type="text" name="mortgage" id="mortgage" value="0">
+            </div>
+            <div>
+                <label for="water">Water Bill: </label>
+                <input type="text" name="water" id="water" value="0">
+            </div>
+            <div>
+                <label for="expenses">Other Expenses</label>
+                <input type="text" name="expenses" id="expenses" value="0">
+            </div>
         </div>
         <div>
             <button type="submit">Calculate</button>
