added calc functions

--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
           type="text" 
           name="expense-description" 
           id="expense-description" 
-          placeholder="Ex. Mortgage/Rent" 
-          required
-        >
+          placeholder="Ex. Mortgage/Rent"         >
       </div>
       <div>
         <label for="expense-amount">Enter Expense Amount</label>
@@ -55,14 +53,14 @@
           name="expense-amount" 
           id="expense-amount" 
           value="0" 
-          required
         >
       </div>
     </fieldset>
 
-    <!-- Submit -->
+    <!-- Submit/Clear -->
     <div>
       <button type="submit">Calculate</button>
+      <button type='button' id="reset">Reset</button>
     </div>
   </form>
 
